added facebook auth

--- a/ServiceStackMVC/Web.config
+++ b/ServiceStackMVC/Web.config
@@ -18,7 +18,15 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
     <add key="baseServiceUrl" value="http://localhost:50621/api" />
+
+    <add key="oauth.facebook.Permissions" value="email,read_stream" />
+    <add key="oauth.facebook.AppId" value="420042971389061" />
+    <add key="oauth.facebook.AppSecret" value="bb5b18304c64bf475485ef7dc9bce82b" />
+    <add key="oauth.facebook.RedirectUrl" value="http://localhost:50621/" />
+    <add key="oauth.facebook.CallbackUrl" value="http://localhost:50621/api/auth/facebook" />
+    
   </appSettings>
   <!-- Required for MONO -->
   <system.web>
