integrated facebook auth

--- a/ServiceStackMVC/ServiceStackMVC.csproj
+++ b/ServiceStackMVC/ServiceStackMVC.csproj
@@ -45,6 +45,9 @@
     <Reference Include="dotless.Core">
       <HintPath>..\packages\dotless.1.3.1.0\lib\dotless.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Facebook">
+      <HintPath>..\packages\Facebook.6.1.4\lib\net45\Facebook.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="ServiceStack">
       <HintPath>..\packages\ServiceStack.3.9.35\lib\net35\ServiceStack.dll</HintPath>
@@ -162,6 +165,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CommonController.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
+    <Compile Include="Controllers\FacebookController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OrganizationCategoriesController.cs" />
     <Compile Include="Controllers\OrganizationsController.cs" />
@@ -205,6 +209,7 @@
     <Compile Include="Services\OrganizationService.cs" />
     <Compile Include="Services\ResetDb.cs" />
     <Compile Include="Services\StateProvincesService.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\images\glyphicons-halflings-white.png" />
